automated_lags_calculation

--- a/notebooks/market_simulation_calibration.ipynb
+++ b/notebooks/market_simulation_calibration.ipynb
@@ -71,7 +71,11 @@
     "test_data\n",
     "spy_prices = test_data[[\"time_id\", \"price\"]]\n",
     "spy_prices = spy_prices.set_index(\"time_id\", drop = True)\n",
-    "spy_returns = (spy_prices[\"price\"] / spy_prices[\"price\"].shift() - 1).dropna()"
+    "spy_returns = (spy_prices[\"price\"] / spy_prices[\"price\"].shift() - 1).dropna()\n",
+    "\n",
+    "acf_five_lags = acf(spy_returns, nlags = 5)[1:]\n",
+    "acf_abs_five_lags = acf(np.abs(spy_returns), nlags = 5)[1:]\n",
+    "kurtosis_target = weighted_kurtosis(spy_returns, wts = np.ones_like(spy_returns))"
    ]
   },
   {
